Add loaded when action ajax form

--- a/Views/ClassSection/_AddDeXuat.cshtml
+++ b/Views/ClassSection/_AddDeXuat.cshtml
@@ -8,7 +8,7 @@
 
     string name = lhp.TenHP.ToLower();
     var lstDeXuat = models.DeXuatTroGiang.Where(w => w.LopHocPhan.TenHP.ToLower().Equals(name) && w.LopHocPhan.MaCBGD.ToLower().Equals(ma)).ToList();
-
+    int i = 1;
 }
 <div class="modal-body" id="loadcontentdexuat">
     <div class="row">
@@ -67,38 +67,36 @@
                         </tr>
                     </thead>
                     <tbody id="contentAddTaskList">
-                        @for (int i = 1; i <= 3; i++)
-                        {
-                            <tr id="tr-parent-@i" name="@i">
-                                <td valign="middle" class="pe-0 ps-3">
-                                    <textarea rows="1" type="text" id="mota-@i" name="@i" class="form-control" placeholder="Mô tả tóm tắt công việc"></textarea>
-                                    <span class="text-danger" id="valid-mota-@i"></span>
-                                </td>
-                                <td valign="middle" style="width: 80px;" class="pe-0 ps-3">
-                                    <input type="number" maxlength="3" id="khoiluong-@i" name="@i" class="form-control" placeholder="Số giờ" />
-                                    <span class="text-danger" id="valid-khoiluong-@i"></span>
-                                </td>
-                                <td valign="middle" class="pe-0 ps-3">
-                                    <input type="date" id="thoigian-@i" name="@i" class="form-control flatpickr" placeholder="Chọn hạn hoàn thành" />
-                                    <span class="text-danger" id="valid-thoigian-@i"></span>
-                                </td>
-                                <td valign="middle" class="pe-0 ps-3">
-                                    <textarea rows="1" type="text" id="noilamviec-@i" name="@i" class="form-control" placeholder="Giảng đường, tại nhà..."></textarea>
-                                    <span class="text-danger" id="valid-noilamviec-@i"></span>
-                                </td>
-                                <td valign="middle" class="pe-0 ps-3">
-                                    <textarea rows="1" type="text" id="ketqua-@i" name="@i" class="form-control" placeholder="Kết quả công việc"></textarea>
-                                    <span class="text-danger" id="valid-ketqua-@i"></span>
-                                </td>
-                                <td valign="middle" class="ps-3 pe-3">
-                                    <a role="button" id="btnXoa-@i" name="@i" class="text-danger form-control">
-                                        <i class="bi bi-trash"></i>
-                                    </a>
-                                </td>
+                        <tr id="tr-parent-@i" name="@i">
+                            <td valign="middle" class="pe-0 ps-3">
+                                <textarea rows="1" type="text" id="mota-@i" name="@i" class="form-control" placeholder="Mô tả tóm tắt công việc"></textarea>
+                                <span class="text-danger" id="valid-mota-@i"></span>
+                            </td>
+                            <td valign="middle" style="width: 80px;" class="pe-0 ps-3">
+                                <input type="number" maxlength="3" id="khoiluong-@i" name="@i" class="form-control" placeholder="Số giờ" />
+                                <span class="text-danger" id="valid-khoiluong-@i"></span>
+                            </td>
+                            <td valign="middle" class="pe-0 ps-3">
+                                <input type="date" id="thoigian-@i" name="@i" class="form-control flatpickr" placeholder="Chọn hạn hoàn thành" />
+                                <span class="text-danger" id="valid-thoigian-@i"></span>
+                            </td>
+                            <td valign="middle" class="pe-0 ps-3">
+                                <textarea rows="1" type="text" id="noilamviec-@i" name="@i" class="form-control" placeholder="Giảng đường, tại nhà..."></textarea>
+                                <span class="text-danger" id="valid-noilamviec-@i"></span>
+                            </td>
+                            <td valign="middle" class="pe-0 ps-3">
+                                <textarea rows="1" type="text" id="ketqua-@i" name="@i" class="form-control" placeholder="Kết quả công việc"></textarea>
+                                <span class="text-danger" id="valid-ketqua-@i"></span>
+                            </td>
+                            <td valign="middle" class="ps-3 pe-3">
+                                <a role="button" id="btnXoa-@i" name="@i" class="text-danger form-control">
+                                    <i class="bi bi-trash"></i>
+                                </a>
+                            </td>
 
-                            </tr>
+                        </tr>
 
-                        }
+
                         <tr id="row-append">
                             <td colspan="7" class="text-center">
                                 <a id="addRow" data-bs-toggle="tooltip" data-bs-html="true" title="Thêm hàng mới" class="btn btn-sm btn-secondary">
