--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -51,6 +51,7 @@
             <span class="spinner-border spinner-border-sm me-2 text-white" style="width: 30px; height: 30px" role="status" aria-hidden="true"></span>
         </div>*@
     <!-- Wrapper -->
+    <div hidden id="load-fill-page" style="background: #ffffff00; width: 120vw; height: 120vh; position: fixed; z-index: 999999; overflow: hidden; cursor: progress"></div>
     <div id="db-wrapper">
         <!-- navbar vertical -->
         <!-- Sidebar -->
