--- a/Views/TeachingAssistant/Apply.cshtml
+++ b/Views/TeachingAssistant/Apply.cshtml
@@ -66,6 +66,25 @@
     </div>
 </div>
 
+<div class="modal fade" id="taskList" tabindex="-1" role="dialog" aria-labelledby="taskList" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="taskListTitle"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="modal-body" id="contentTaskList">
+
+            </div>
+            <div class="modal-footer">
+                <button id="btnTaskListClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="~/Validation/student/load.js"></script>
 <script src="~/Validation/SVandTA/filterviewapply.js"></script>
 <script src="~/Validation/SVandTA/openapply.js"></script>
