--- a/Views/TeachingAssistant/_Apply.cshtml
+++ b/Views/TeachingAssistant/_Apply.cshtml
@@ -19,7 +19,7 @@
         id_nganhCNTT = formDky.ID_Nganh;
     }
 
-    var lstTkb = model.ThoiKhoaBieu.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT && w.LopHocPhan.DeXuatTroGiang.Count > 0).ToList();
+    var lstTkb = model.ThoiKhoaBieu.Where(w => w.ID_HocKy == id_hkGanNhat && w.ID_Nganh == id_nganhCNTT && w.LopHocPhan.DeXuatTroGiang.Where(ws => ws.TrangThai == true).Count() > 0).ToList();
     int idTk = Int32.Parse(Session["user-id"].ToString());
 
 }
@@ -68,7 +68,7 @@
         @if (formDky == null)
         {
             <div class="card" id="pageload">
-                <p class="m-4 text-center h3">Chưa mở đăng ký</p>
+                <p class="m-4 text-center h3">Ngoài thời gian đăng ký</p>
             </div>
         }
         else
@@ -169,8 +169,17 @@
                                                                 <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
-                                                                   id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                   id="applyLHP-@items.LopHocPhan.ID">
+                                                                    @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                    {
+                                                                        <span>Cập nhật ứng tuyển</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span>Chi tiết ứng tuyển</span>
+                                                                    }
+                                                                </a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                         else
@@ -182,7 +191,7 @@
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
                                                                    id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                     }
@@ -210,8 +219,17 @@
                                                                 <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
-                                                                   id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                   id="applyLHP-@items.LopHocPhan.ID">
+                                                                    @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                    {
+                                                                        <span>Cập nhật ứng tuyển</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span>Chi tiết ứng tuyển</span>
+                                                                    }
+                                                                </a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                         else
@@ -223,7 +241,7 @@
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
                                                                    id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                     }
@@ -251,8 +269,17 @@
                                                                 <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
-                                                                   id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                   id="applyLHP-@items.LopHocPhan.ID">
+                                                                    @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                    {
+                                                                        <span>Cập nhật ứng tuyển</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span>Chi tiết ứng tuyển</span>
+                                                                    }
+                                                                </a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                         else
@@ -264,7 +291,7 @@
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
                                                                    id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                     }
@@ -292,8 +319,17 @@
                                                                 <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
-                                                                   id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                   id="applyLHP-@items.LopHocPhan.ID">
+                                                                    @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                    {
+                                                                        <span>Cập nhật ứng tuyển</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span>Chi tiết ứng tuyển</span>
+                                                                    }
+                                                                </a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                         else
@@ -305,7 +341,7 @@
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
                                                                    id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                     }
@@ -336,8 +372,17 @@
                                                                     <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                        name="@items.LopHocPhan.ID"
                                                                        class="btn btn-sm btn-light me-2"
-                                                                       id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                    <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                       id="applyLHP-@items.LopHocPhan.ID">
+                                                                        @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                        {
+                                                                            <span>Cập nhật ứng tuyển</span>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <span>Chi tiết ứng tuyển</span>
+                                                                        }
+                                                                    </a>
+                                                                    <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                                 </p>
                                                             }
                                                             else
@@ -349,7 +394,7 @@
                                                                        name="@items.LopHocPhan.ID"
                                                                        class="btn btn-sm btn-light me-2"
                                                                        id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                    <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                    <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                                 </p>
                                                             }
                                                         }
@@ -376,8 +421,17 @@
                                                                     <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                        name="@items.LopHocPhan.ID"
                                                                        class="btn btn-sm btn-light me-2"
-                                                                       id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                    <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                       id="applyLHP-@items.LopHocPhan.ID">
+                                                                        @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                        {
+                                                                            <span>Cập nhật ứng tuyển</span>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <span>Chi tiết ứng tuyển</span>
+                                                                        }
+                                                                    </a>
+                                                                    <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                                 </p>
                                                             }
                                                             else
@@ -389,7 +443,7 @@
                                                                        name="@items.LopHocPhan.ID"
                                                                        class="btn btn-sm btn-light me-2"
                                                                        id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                    <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                    <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                                 </p>
                                                             }
                                                         }
