--- a/Views/TeachingAssistant/_FilterParentApply.cshtml
+++ b/Views/TeachingAssistant/_FilterParentApply.cshtml
@@ -25,7 +25,7 @@
     @if (formDky == null)
     {
         <div class="card" id="pageload">
-            <p class="m-4 text-center h3">Chưa mở đăng ký</p>
+            <p class="m-4 text-center h3">Ngoài thời gian đăng ký</p>
         </div>
     }
     else
@@ -126,8 +126,17 @@
                                                             <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
-                                                               id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                               id="applyLHP-@items.LopHocPhan.ID">
+                                                                @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                {
+                                                                    <span>Cập nhật ứng tuyển</span>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <span>Chi tiết ứng tuyển</span>
+                                                                }
+                                                            </a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                     else
@@ -139,7 +148,7 @@
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
                                                                id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                 }
@@ -167,8 +176,17 @@
                                                             <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
-                                                               id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                               id="applyLHP-@items.LopHocPhan.ID">
+                                                                @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                {
+                                                                    <span>Cập nhật ứng tuyển</span>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <span>Chi tiết ứng tuyển</span>
+                                                                }
+                                                            </a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                     else
@@ -180,7 +198,7 @@
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
                                                                id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                 }
@@ -208,8 +226,17 @@
                                                             <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
-                                                               id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                               id="applyLHP-@items.LopHocPhan.ID">
+                                                                @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                {
+                                                                    <span>Cập nhật ứng tuyển</span>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <span>Chi tiết ứng tuyển</span>
+                                                                }
+                                                            </a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                     else
@@ -221,7 +248,7 @@
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
                                                                id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                 }
@@ -249,8 +276,17 @@
                                                             <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
-                                                               id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                               id="applyLHP-@items.LopHocPhan.ID">
+                                                                @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                {
+                                                                    <span>Cập nhật ứng tuyển</span>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <span>Chi tiết ứng tuyển</span>
+                                                                }
+                                                            </a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                     else
@@ -262,7 +298,7 @@
                                                                name="@items.LopHocPhan.ID"
                                                                class="btn btn-sm btn-light me-2"
                                                                id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                            <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                            <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                         </p>
                                                     }
                                                 }
@@ -293,8 +329,17 @@
                                                                 <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
-                                                                   id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                   id="applyLHP-@items.LopHocPhan.ID">
+                                                                    @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                    {
+                                                                        <span>Cập nhật ứng tuyển</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span>Chi tiết ứng tuyển</span>
+                                                                    }
+                                                                </a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                         else
@@ -306,7 +351,7 @@
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
                                                                    id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                     }
@@ -333,8 +378,17 @@
                                                                 <a typeLHP="dadk" IdFormDangKy="@formDky.ID" titleForm="Cập nhật đăng ký trợ giảng LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP."
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
-                                                                   id="applyLHP-@items.LopHocPhan.ID">Cập nhật ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                   id="applyLHP-@items.LopHocPhan.ID">
+                                                                    @if (items.LopHocPhan.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk).TrangThai == false)
+                                                                    {
+                                                                        <span>Cập nhật ứng tuyển</span>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <span>Chi tiết ứng tuyển</span>
+                                                                    }
+                                                                </a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                         else
@@ -346,7 +400,7 @@
                                                                    name="@items.LopHocPhan.ID"
                                                                    class="btn btn-sm btn-light me-2"
                                                                    id="applyLHP-@items.LopHocPhan.ID">Ứng tuyển</a>
-                                                                <a class="btn btn-sm btn-light">Chi tiết công việc</a>
+                                                                <a id="applyTASK-@items.LopHocPhan.ID" titleTaskList="Chi tiết công việc LHP: @items.LopHocPhan.MaLHP - @items.LopHocPhan.TenHP." name="@items.LopHocPhan.ID" class="btn btn-sm btn-light">Chi tiết công việc</a>
                                                             </p>
                                                         }
                                                     }
