--- a/Views/TermAndMajor/Semester.cshtml
+++ b/Views/TermAndMajor/Semester.cshtml
@@ -68,12 +68,12 @@
                                         </td>
                                         <td class="text-nowrap">
                                             <a style="font-size: 20px" role="button" id="openSua-@item.ID" name="@item.ID" class="text-success">
-                                                <i class="bi bi-pencil-square me-2"></i>
+                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Cập nhật"><i class="bi bi-pencil-square me-2"></i></span>
                                             </a>
                                             @if (item.ThoiKhoaBieu.Count < 1)
                                             {
                                                 <a style="font-size: 20px" role="button" id="openXoa-@item.ID" fullname="@item.TenHocKy" name="@item.ID" class="text-danger">
-                                                    <i class="bi bi-trash"></i>
+                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xóa bỏ"><i class="bi bi-trash"></i></span>
                                                 </a>
                                             }
                                         </td>
@@ -101,7 +101,7 @@
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="tenhocky">Học kỳ <span class="text-danger">*</span></label>
-                                <input type="number" id="tenhocky"maxlength="3"  class="form-control" placeholder="Nhập học kỳ (VD: 224)">
+                                <input type="number" id="tenhocky" maxlength="3" class="form-control" placeholder="Nhập học kỳ (VD: 224)">
                                 <span class="text-danger" id="valid-tenhocky"></span>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                                 <span class="text-danger" id="valid-namketthuc"></span>
                             </div>
                         </div>
-                       
+
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="ngaybatdau">
